--- a/src/components/Header/theme-toggle.module.scss
+++ b/src/components/Header/theme-toggle.module.scss
@@ -1,4 +1,4 @@
-@import '../../styles/mixins.scss';
+@use '../../styles/mixins.scss';
 
 $radius: 1000px; // Big value to round all corners evenly to pill shape
 
@@ -21,11 +21,19 @@ $radius: 1000px; // Big value to round all corners evenly to pill shape
   &:hover {
     box-shadow: inset 0 0 5px var(--theme-toggle-background-color);
   }
+
+  &:has(:focus-visible) {
+    border: 2px solid var(--theme-toggle-slider-color);
+
+    .slider {
+      border: 1px solid var(--theme-toggle-text-color);
+    }
+  }
 }
 
 .fadeIn {
   opacity: 0;
-  @include animateOpacity(1s, 3s);
+  @include mixins.animateOpacity(1s, 3s);
 }
 
 .slider {
@@ -69,7 +77,7 @@ $radius: 1000px; // Big value to round all corners evenly to pill shape
   transition: background .5s;
 }
 
-@include smallScreen {
+@include mixins.smallScreen {
   // don't allow font size to shrink past small screen size
   .toggle {
     font-size: 0.75rem;
